Bug Fixes & GUI Finalized

--- a/src/CredentialPrompt.xaml
+++ b/src/CredentialPrompt.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Win_Info"
         mc:Ignorable="d"
-        Title="CredentialPrompt" Width="365" Height="195" WindowStartupLocation="CenterOwner"
+        Title="CredentialPrompt" Width="365" Height="200" WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow">
     <Grid>
         <TextBox x:Name="UserNameBox" HorizontalAlignment="Left" Margin="94,45,0,0" TextWrapping="Wrap" Width="205" TextChanged="UserNameBox_TextChanged" Height="21" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Margin="94,79,0,0" VerticalAlignment="Top" Width="205" PasswordChanged="PasswordBox_PasswordChanged"/>
+        <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Margin="94,79,0,0" VerticalAlignment="Top" Width="205" PasswordChanged="PasswordBox_PasswordChanged" KeyDown="PasswordBox_KeyDown" />
         <TextBlock x:Name="UserName" HorizontalAlignment="Left" Margin="9,46,0,0" TextWrapping="Wrap" Text="User name:" VerticalAlignment="Top" Height="21"/>
         <TextBlock x:Name="Password" HorizontalAlignment="Left" Margin="10,82,0,0" TextWrapping="Wrap" Text="Password:" VerticalAlignment="Top"/>
         <TextBlock x:Name="Domain" HorizontalAlignment="Left" Margin="94,104,0,0" TextWrapping="Wrap" Text="Domain:" VerticalAlignment="Top" Width="46"/>
